before changing sturcture for responsive design

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.svg-icon {
+	transition: fill 0.3s;
+	cursor: pointer;
+}
+
+.svg-icon.hovered path {
+	fill: #ffffff;
+}
